default/objects/CCS_Carnet__c/CCS_Carnet__c.object-meta.xml
<CustomObject>
    <description>CCS Carnet je jeden z nejrozšířenějších systémů monitoringu vozidel a strojů v ČR a SR. V současné době slouží více než 4000 firmám a téměř 50 000 uživatelům.</description>
    <label>CCS Carnet</label>
    <nameField>
        <label>Název objednávky (CCS Carnet)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Carnet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>