default/objects/CCS_Carnet__c/fields/Celkem_mesicni_platby__c.field-meta.xml
<CustomField>
    <fullName>Celkem_mesicni_platby__c</fullName>
    <description>Celkem měsíční platby.</description>
    <inlineHelpText>Celkem měsíční platby.</inlineHelpText>
    <label>Celkem měsíční platby</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>