default/objects/CCS_Carnet__c/fields/Cena_objednavky_celkem__c.field-meta.xml
<CustomField>
    <fullName>Cena_objednavky_celkem__c</fullName>
    <description>Cena objednávky celkem.</description>
    <inlineHelpText>Cena objednávky celkem.</inlineHelpText>
    <label>Cena objednávky celkem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>