default/objects/CCS_Carnet__c/fields/GPRS_Profi__c.field-meta.xml
<CustomField>
    <fullName>GPRS_Profi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPRS Profi</label>
    <type>Checkbox</type>
</CustomField>