default/objects/CCS_Carnet__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kterého Leadu se objednávka týká?</description>
    <inlineHelpText>Kterého Leadu se objednávka týká?</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CCS Carnet</relationshipLabel>
    <relationshipName>CCS_Carnet</relationshipName>
    <type>Lookup</type>
</CustomField>