default/objects/CCS_Carnet__c/fields/Pocet_vozu_s_CCS_Carnet__c.field-meta.xml
<CustomField>
    <fullName>Pocet_vozu_s_CCS_Carnet__c</fullName>
    <description>Počet vozů, které budou používat systém CCS Carnet.</description>
    <inlineHelpText>Počet vozů, které budou používat systém CCS Carnet.</inlineHelpText>
    <label>Počet vozů s CCS Carnet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>