default/objects/CCS_Carnet__c/fields/Vyberte_si_akci__c.field-meta.xml
<CustomField>
    <fullName>Vyberte_si_akci__c</fullName>
    <description>Vyberte si akci.</description>
    <inlineHelpText>Vyberte si akci.</inlineHelpText>
    <label>Vyberte si akci</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 + 1 Zdarma</fullName>
            </value>
            <value>
                <fullName>CCS Carnet s dálniční známkou 2017!</fullName>
            </value>
            <value>
                <fullName>AKCE PLUS: CCS Carnet s DZ!</fullName>
            </value>
            <value>
                <fullName>Akcia PLUS: Carnet s kartou Bonus + nabitú na 40 EUR zadarmo!</fullName>
            </value>
            <value>
                <fullName>1 + 1 Zdarma</fullName>
            </value>
            <value>
                <fullName>Akce PLUS: Carnet s kartou Bonus+ zdarma!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>