default/objects/CCS_Carnet__c/fields/Zakladni_sestava_CCS_Carnet__c.field-meta.xml
<CustomField>
    <fullName>Zakladni_sestava_CCS_Carnet__c</fullName>
    <description>Základní sestava CCS Carnet.</description>
    <inlineHelpText>Základní sestava CCS Carnet.</inlineHelpText>
    <label>Základní sestava CCS Carnet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>