default/objects/CCS_Carnet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Klient__c</columns>
    <columns>Vyberte_si_akci__c</columns>
    <columns>Cena_objednavky_celkem__c</columns>
    <columns>Pocet_vozu_s_CCS_Carnet__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cislo_obchodniho_zastupce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>