default/objects/CCS_Carnet__c/listViews/CCS_Web_Leads_SK_CCS_Carnet.listView-meta.xml
<ListView>
    <fullName>CCS_Web_Leads_SK_CCS_Carnet</fullName>
    <filterScope>Queue</filterScope>
    <label>CCS Web Leads SK</label>
    <queue>CCS_Web_Leads_SK</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>